# TrivialTestKit

./: .gitignore  CHANGELOG.md  LICENSE  MinGW_MakeTest.bat  MinGW_MakeTest32.bat  MinGW_MakeTest32_Wide.bat  MinGW_MakeTest64.bat  MinGW_MakeTest64_Wide.bat  MinGW_Test.bat  Pack.bat  README.md  Test.bat  TestGCC.bat  TestGCC_32.bat  TestGCC_64.bat  TestMinGW.bat  TestMinGW_32.bat  TestMinGW_32_Wide.bat  TestMinGW_64.bat  TestMinGW_64_Wide.bat  TestWideGCC.bat  TestWideGCC_32.bat  TestWideGCC_64.bat  TrivialTestKit.props  TrivialTestKit.sln  TrivialTestKit.vcxproj  TrivialTestKit.vcxproj.filters
.github/workflows/: build_and_run.yml  build_and_test.yml  build_and_test_mingw.yml
Example/: Example.vcxproj
Example/src/: main.cpp
Test/: BuildGCC.bat  BuildWideGCC.bat  CMakeLists.txt  MinGW_Make.bat  Test.vcxproj  Test.vcxproj.filters  TestGCC.bat
Test/src/: AssertFails.h  LineDependents.h  Support.cpp  Support.h  Tests.cpp  Tests.h  main.cpp
Test/src/Folderф/: InUnicodeFolder.h
TrivialTestKit/: TrivialTestKit.vcxproj  TrivialTestKit.vcxproj.filters
TrivialTestKit/include/: TrivialTestKit.h
TrivialTestKit_Example/: TrivialTestKit_Example.vcxproj
TrivialTestKit_Example/src/: main.cpp
TrivialTestKit_ExampleInPlace/: TrivialTestKit_ExampleInPlace.vcxproj
TrivialTestKit_ExampleInPlace/src/: main.cpp
TrivialTestKit_Test/: CMakeLists.txt  MinGW_Make.bat  TrivialTestKit_Test.vcxproj  TrivialTestKit_Test.vcxproj.filters
TrivialTestKit_Test/src/: LineDependents.h  Support.cpp  Support.h  Tests.cpp  Tests.h  main.cpp
TrivialTestKit_Test/src/Folderф/: InUnicodeFolder.h
include/: TrivialTestKit.h
