cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project("TrivialTestKit_Test")

if(CMAKE_GENERATOR STREQUAL "MinGW Makefiles")
    set(CMAKE_CXX_FLAGS_DEBUGWIDE "${CMAKE_CXX_FLAGS_DEBUG} -std=c++11 -D WIDE_ORIENTED -D _DEBUG")
    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -std=c++11 -D _DEBUG")
    set(CMAKE_CXX_FLAGS_RELEASEWIDE "${CMAKE_CXX_FLAGS_RELEASE} -std=c++11 -D WIDE_ORIENTED")
    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -std=c++11")
endif()

if(ARCHITECTURE STREQUAL "64")
    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -m64")
    set(CMAKE_CXX_FLAGS_DEBUGWIDE "${CMAKE_CXX_FLAGS_DEBUGWIDE} -m64")
    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -m64")
    set(CMAKE_CXX_FLAGS_RELEASEWIDE "${CMAKE_CXX_FLAGS_RELEASEWIDE} -m64")
else()
    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -m32")
    set(CMAKE_CXX_FLAGS_DEBUGWIDE "${CMAKE_CXX_FLAGS_DEBUGWIDE} -m32")
    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -m32")
    set(CMAKE_CXX_FLAGS_RELEASEWIDE "${CMAKE_CXX_FLAGS_RELEASEWIDE} -m32")
endif()

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    message("FLAGS: ${CMAKE_CXX_FLAGS_DEBUG}")
elseif(CMAKE_BUILD_TYPE STREQUAL "DebugWIDE")
    message("FLAGS: ${CMAKE_CXX_FLAGS_DEBUGWIDE}")
elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
    message("FLAGS: ${CMAKE_CXX_FLAGS_RELEASE}")
elseif(CMAKE_BUILD_TYPE STREQUAL "ReleaseWIDE")
    message("FLAGS: ${CMAKE_CXX_FLAGS_RELEASEWIDE}")
endif()

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

file(GLOB_RECURSE SRC_FILES src/*.cpp)
add_executable(${CMAKE_PROJECT_NAME} ${SRC_FILES})
target_include_directories(${CMAKE_PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../include)
target_include_directories(${CMAKE_PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src/Folderф)
target_include_directories(${CMAKE_PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
